# fdkevin-cf-bot

./: Cargo.toml  wrangler.toml
.github/workflows/: build.yml  publish.yml
src/: bot.rs  bot2.rs  chat.rs  command.rs  lib.rs  openai.rs
