[package]
name = "fdkevin-bot"
version = "0.1.0"
authors = ["FDKevin <i@fdke.vin>", "Kay Lin <i@v2bv.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
log = "0.4.17"
serde = { version = "1.0.145", features = ["derive"] }
cfg-if = "1.0.0"
worker = "0.0.11"
sha2 = "0.10.7"
futures = "0.3.24"
serde_json = "1.0.85"
telbot-types = "0.3.0"
telegram_types = "0.6.0"
# teloxide = { version = "0.12.2", features = ["macros"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
telbot-cf-worker = "0.3.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
