[package]
name = "fdkevin-bot"
version = "0.1.0"
authors = ["FDKevin <i@fdke.vin>", "Kay Lin <i@v2bv.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
cfg-if = "1.0.0"
worker = "0.0.18"
sha2 = "0.10.7"
futures = "0.3.28"
serde_json = "1.0.116"
telegram_types = "0.6.0"
console_error_panic_hook = { version = "0.1.7", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
